--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_CANDY_MACHINE_ID=<YOUR CANDY MACHINE PROGRAM ID>
+REACT_APP_CANDY_MACHINE_ID=HRKT6zd6SmcuLFkTMgEmhrtdJBYYSMJt7JMmoNCdsBoP
 
 REACT_APP_SOLANA_NETWORK=devnet
 REACT_APP_SOLANA_RPC_HOST=https://metaplex.devnet.rpcpool.com/
