--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@babel/runtime": "^7.15.5",
-    "@civic/solana-gateway-react": "^0.9.2",
-    "@identity.com/solana-gateway-ts": "^0.8.1",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@civic/solana-gateway-react": "^0.10.0",
+    "@identity.com/solana-gateway-ts": "^0.10.0",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.104",
+    "@mui/material": "^5.10.10",
     "@project-serum/anchor": "^0.17.0",
+    "@solana-mobile/wallet-adapter-mobile": "^0.9.7",
     "@solana/spl-token": "^0.1.8",
-    "@solana/wallet-adapter-base": "^0.7.0",
-    "@solana/wallet-adapter-material-ui": "^0.13.1",
-    "@solana/wallet-adapter-react": "^0.13.1",
-    "@solana/wallet-adapter-react-ui": "^0.6.1",
-    "@solana/wallet-adapter-wallets": "^0.11.3",
-    "@solana/web3.js": "^1.33.0",
+    "@solana/wallet-adapter-base": "^0.9.18",
+    "@solana/wallet-adapter-material-ui": "^0.16.17-rc.3",
+    "@solana/wallet-adapter-phantom": "^0.9.17",
+    "@solana/wallet-adapter-react": "^0.15.21-rc.4",
+    "@solana/wallet-adapter-react-ui": "^0.9.19-rc.4",
+    "@solana/wallet-adapter-slope": "^0.5.16",
+    "@solana/wallet-adapter-solflare": "^0.6.18",
+    "@solana/wallet-adapter-sollet": "^0.11.12",
+    "@solana/web3.js": "^1.58.0",
     "mime": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -30,13 +34,13 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "craco start",
     "lint": "prettier -c 'src/**/*.{ts,tsx}' && npm run lint:eslint",
     "lint:eslint": "eslint 'src/**/*.{ts,tsx}'",
     "lint:fix": "prettier --write 'src/**/*.{ts,tsx}' && eslint --fix 'src/**/*.{ts,tsx}'",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +61,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/plugin-transform-shorthand-properties": "^7.18.6",
+    "@craco/craco": "^6.4.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@testing-library/dom": "^7.21.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
