--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "craco start",
